# Xelo-Client-FIX-

./: .gitignore  .gitmodules  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SIGNING.md  local.properties  settings.gradle
.github/workflows/: apk.yml  build.yml  main.yml  release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/themes/: default.json  purple.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/XeloOverlay/: CMakeLists.txt
app/src/main/cpp/XeloOverlay/src/common/: transition.cpp  transition.h
app/src/main/cpp/XeloOverlay/src/counter/: fps.cpp
app/src/main/cpp/XeloOverlay/src/zoom/: zoom.cpp
app/src/main/cpp/unpaircore/: CMakeLists.txt
app/src/main/cpp/unpaircore/src/: ArmDecode.h  ExecuteProgram.cpp  Hook.cpp  Hook.h  HookManager.cpp  HookManager.h  JNIEntry.cpp  minecraftTitle.h
app/src/main/cpp/xelo_init/: CMakeLists.txt
app/src/main/cpp/xelo_init/src/: ElfUtils.cpp  ElfUtils.h  Init.cpp  LinkerNamespaceCompat.h  LinkerNamespaces.h  LinkerNamespaces_10.h  LinkerNamespaces_11.h  LinkerNamespaces_12.h  LinkerNamespaces_8.h  Runtime.cpp  Runtime.h
app/src/main/cpp/xelo_motion_blur/: CMakeLists.txt
app/src/main/cpp/xelo_motion_blur/src/: main.cpp
app/src/main/res/anim/: button_pop.xml  pop_down.xml  pop_up.xml  slide_fade_in_right.xml  slide_in_left.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: bg_bubble_dark.xml  bg_glow_cyan.xml  bg_glow_green.xml  bg_inbuilt_badge.xml  bg_logo_glow.xml  bg_mod_menu_button.xml  bg_mod_menu_dialog.xml  bg_overlay_button_active.xml  bg_popup_menu_rounded.xml  bg_search_box.xml  bg_spinner_dark.xml  bg_spinner_popup_dark.xml  bg_third_level_item.xml  button_background.xml  credit_card_border.xml  dialog_black_rounded_stroke.xml  draw.xml  edittext_background.xml  header_background.xml  heart.xml  ic_add.xml  ic_arrow_back.xml  ic_camera.xml  ic_camera_selector.xml  ic_close.xml  ic_cps.xml  ic_cps_preview.xml  ic_dashboard.xml  ic_discord.xml  ic_folder_open.xml  ic_fps.xml  ic_fps_preview.xml  ic_github.xml  ic_hotbar_eight_selector.xml  ic_hotbar_five_selector.xml  ic_hotbar_four_selector.xml  ic_hotbar_nine_selector.xml  ic_hotbar_one_selector.xml  ic_hotbar_seven_selector.xml  ic_hotbar_six_selector.xml  (+30 more)
app/src/main/res/layout/: activity_crash.xml  activity_discord_login.xml  activity_inbuilt_mods.xml  activity_inbuilt_mods_customize.xml  activity_main.xml  alert_dialog_custom.xml  credit_card_item.xml  dialog_credits.xml  dialog_loading.xml  dialog_mod_menu.xml  dialog_versions.xml  fragment_about.xml  fragment_configuration.xml  fragment_dashboard.xml  fragment_home.xml  fragment_modules.xml  fragment_resource.xml  fragment_resource_packs.xml  fragment_settings.xml  fragment_support.xml  fragment_themes.xml  fragment_versions.xml  fragment_versions_beta.xml  item_folder.xml  (+24 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
minecraft/: build.gradle.kts
minecraft-msftauth/: build.gradle.kts
minecraft/src/main/: AndroidManifest.xml
scripts/: post-merge.sh
(+472 files in other folders)
